--- a/plugin.xml
+++ b/plugin.xml
@@ -70,52 +70,55 @@
 		<source-file src="src/android/FCMPluginActivity.java" target-dir="src/com/gae/scaffolder/plugin" />
     </platform>
 
-    <!-- IOS CONFIGURATION -->
-    <platform name="ios">
-        <config-file target="config.xml" parent="/*">
-            <feature name="FCMPlugin">
-                <param name="ios-package" value="FCMPlugin"/>
-            </feature>
-        </config-file>
+	<!-- IOS CONFIGURATION -->
+	<platform name="ios">
+		<preference name="IOS_FIREBASE_MESSAGING_VERSION" default="~> 7.4.0" />
+		<config-file target="config.xml" parent="/*">
+			<feature name="FCMPlugin">
+				<param name="ios-package" value="FCMPlugin"/>
+			</feature>
+		</config-file>
 
 		<!-- ENABLE PUSH CAPABILITY -->
 		<config-file parent="aps-environment" target="*/Entitlements-Debug.plist">
-		    <string>development</string>
+			<string>development</string>
 		</config-file>
 		<config-file parent="aps-environment" target="*/Entitlements-Release.plist">
 			<string>production</string>
 		</config-file>
+		<config-file target="*-Info.plist" parent="UIBackgroundModes">
+			<array>
+				<string>remote-notification</string>
+			</array>
+		</config-file>
+		<config-file target="*-Info.plist" parent="FirebaseAppDelegateProxyEnabled">
+			<false/>
+		</config-file>
 
-		<resource-file src="src/ios/GoogleService-Info.plist" target="Resources/GoogleService-Info.plist" />
+		<resource-file src="src/ios/Assets/GoogleService-Info.plist" target="Resources/GoogleService-Info.plist" />
 
-        <header-file src="src/ios/FCMPlugin.h" />
-        <source-file src="src/ios/FCMPlugin.m" />
+		<header-file src="src/ios/FCMPlugin.h" />
+		<source-file src="src/ios/FCMPlugin.m" />
 
 		<header-file src="src/ios/AppDelegate+FCMPlugin.h" />
 		<source-file src="src/ios/AppDelegate+FCMPlugin.m" />
 
-		<!-- FIREBASE COCOA PODS (not for the moment)-->
-		<!-- <framework src="Firebase/Messaging" type="podspec" spec="~> 0"/> -->
+		<header-file src="src/ios/FCMPluginIOS9Support.h" />
+		<source-file src="src/ios/FCMPluginIOS9Support.m" />
 
-		<!-- FIREBASE LIBS -->
-		<header-file src="src/ios/firebase/Firebase.h" />
-		<!-- <framework src="src/ios/firebase/FirebaseAnalytics.framework" custom="true" /> -->
-		<framework src="src/ios/firebase/FirebaseCore.framework" custom="true" />
-		<framework src="src/ios/firebase/FirebaseInstanceID.framework" custom="true" />
-		<framework src="src/ios/firebase/FirebaseMessaging.framework" custom="true" />
-		<framework src="src/ios/firebase/GoogleInterchangeUtilities.framework" custom="true" />
-		<framework src="src/ios/firebase/GoogleIPhoneUtilities.framework" custom="true" />
-		<framework src="src/ios/firebase/GoogleSymbolUtilities.framework" custom="true" />
-		<framework src="src/ios/firebase/GoogleUtilities.framework" custom="true" />
+		<header-file src="src/ios/FCMNotificationCenterDelegate.h" />
+		<source-file src="src/ios/FCMNotificationCenterDelegate.m" />
 
-		<!-- OTHER NEEDED LIBS -->
-		<framework src="libc++.tbd" />
-		<framework src="libz.tbd" />
-		<framework src="AddressBook.framework" />
-		<framework src="libsqlite3.0.tbd" />
-		<framework src="libz.tbd" />
-		<framework src="Security.framework" />
-    </platform>
+		<!-- FIREBASE COCOAPODS-->
+		<podspec>
+			<config>
+                <source url="https://github.com/CocoaPods/Specs.git"/>
+			</config>
+			<pods>
+				<pod name="Firebase/Messaging" spec="$IOS_FIREBASE_MESSAGING_VERSION"/>
+			</pods>
+		</podspec>
+	</platform>
 
 	<!-- COPY FCM CONFIG FILES TO PLATFORM AFTER PLUGIN INSTALL OR PLATFORM PREPARE -->
 	<hook src="scripts/fcm_config_files_process.js" type="after_plugin_add" />
